Bug 265311 - Lyrics almost unreadable
Summary: Lyrics almost unreadable
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Lyrics (other bugs)
Version First Reported In: 2.4.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-03 17:33 UTC by Rosetzky Cedric
Modified: 2011-02-28 17:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.1
Sentry Crash Report:


Attachments
Screenshot of lyrics part. (100.09 KB, image/png)
2011-02-03 21:02 UTC, Rosetzky Cedric
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rosetzky Cedric 2011-02-03 17:33:21 UTC
Version:           2.4.0 (using KDE 4.6.0) 
OS:                Linux

Since Amarok 2.4.0, the lyrics are displayed in white, on a bright blue background, which makes them almost unreadable.

Reproducible: Didn't try
Comment 1 Myriam Schweingruber 2011-02-03 20:55:03 UTC
What color scheme are you using? Could you please provide a screenshot? I can't reproduce this here at all, using the default KDE 4.6 oxygen settings
Comment 2 Rosetzky Cedric 2011-02-03 21:01:49 UTC
The color sheme is the default one. Here is the screenshot.
Comment 3 Rosetzky Cedric 2011-02-03 21:02:42 UTC
Created attachment 56835 [details]
Screenshot of lyrics part.
Comment 4 Myriam Schweingruber 2011-02-04 08:40:48 UTC
You must have changed something in the defaults, as the text is black here.
Comment 5 Rosetzky Cedric 2011-02-04 16:51:22 UTC
No I didn't. I never changed the color sheme (and just reselected the default one to be sure), and it started to happen right after I updated Amarok to 2.4.0. 
And if it was that, the text would also be white in the wikipedia and the tabs applets, but it's black.
Comment 6 dawan 2011-02-12 01:31:37 UTC
I have a way to reproduce: when I launch amarok lyrics are black, but if re-fetch them, they become white (as the lyrics of any other song read after), until amarok is closed.
Works every time I try, on amarok 2.4.0 with kde 4.6.0 and qt 4.7.1.
Comment 7 Rosetzky Cedric 2011-02-13 09:39:22 UTC
resetting it as unconfirmed to give it more visibility.
Comment 8 dawan 2011-02-14 20:51:04 UTC
One more thing: fetching is not what triggers the change, it happens as soon as I remove all the song's lyrics via amarok's center panel. If I then start typing something, it is already white (with a white background since i'm editing).
Comment 9 Rosetzky Cedric 2011-02-14 20:56:16 UTC
Well, I disabled and uninstalled all the lyrics applets other than the default one, erased all the files in .kde4 related to Amarok lyrics applets, and activated the default lyrics applet to see it changes sompething. And actually yes, the text is now black again.
Looks like some change in the lyrics panel hasn't been taken in account by the other scripts yet.
There is still an ugly bug thought. When you're in editing mode, and you copy, in the lyrics panel, some texte, and paste it somewhere else in that panel, the text and it's background is black, so the text can't be read.
Comment 10 Rick W. Chen 2011-02-28 09:43:14 UTC
Git commit e43016a083e496dabb79f7af7401ab83410b5f8f by Rick W. Chen.
Committed on 15/02/2011 at 09:25.
Pushed by rickc into branch 'master'.

lyrics: fix text colors for kde 4.6

BUG: 265311

M  +1    -0    ChangeLog     
M  +13   -13   src/context/applets/lyrics/LyricsApplet.cpp     

http://commits.kde.org/amarok/e43016a083e496dabb79f7af7401ab83410b5f8f