lyrics: fix text colors for kde 4.6

BUG: 265311